--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 <body>
     <h1>Welcome to Tic Tac Toe!!</h1>
     <div id="tic-tac-toe-game">
-        <div class="row">
-            <div class="cell" id="cell-1"></div>
-            <div class="cell" id="cell-2"></div>
-            <div class="cell" id="cell-3"></div>
+        <div id="cellContainer">
+            <div cellIndex = "0" class="cell"></div>
+            <div cellIndex = "1" class="cell"></div>
+            <div cellIndex = "2" class="cell"></div>
+            <div cellIndex = "3" class="cell"></div>
+            <div cellIndex = "4" class="cell"></div>
+            <div cellIndex = "5" class="cell"></div>
+            <div cellIndex = "6" class="cell"></div>
+            <div cellIndex = "7" class="cell"></div>
+            <div cellIndex = "8" class="cell"></div>
         </div>
-        <div class="row">
-            <div class="cell" id="cell-4"></div>
-            <div class="cell" id="cell-5"></div>
-            <div class="cell" id="cell-6"></div>
-        </div>
-        <div class="row">
-            <div class="cell" id="cell-7"></div>
-            <div class="cell" id="cell-8"></div>
-            <div class="cell" id="cell-9"></div>
-        </div>
+        <h2 id="status"></h2>
+        <button id="restartButton"> Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
