--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>Welcome to Tic Tac Toe!!</h1>
     <div id="tic-tac-toe-game">
         <div id="cellContainer">
-            <div cellIndex = "0" class="cell"></div>
-            <div cellIndex = "1" class="cell"></div>
-            <div cellIndex = "2" class="cell"></div>
-            <div cellIndex = "3" class="cell"></div>
-            <div cellIndex = "4" class="cell"></div>
-            <div cellIndex = "5" class="cell"></div>
-            <div cellIndex = "6" class="cell"></div>
-            <div cellIndex = "7" class="cell"></div>
-            <div cellIndex = "8" class="cell"></div>
+            <div data-cell-index = "0" class="cell"></div> 
+            <div data-cell-index = "1" class="cell"></div>
+            <div data-cell-index = "2" class="cell"></div>
+            <div data-cell-index = "3" class="cell"></div>
+            <div data-cell-index = "4" class="cell"></div>
+            <div data-cell-index = "5" class="cell"></div>
+            <div data-cell-index = "6" class="cell"></div>
+            <div data-cell-index = "7" class="cell"></div>
+            <div data-cell-index = "8" class="cell"></div>
         </div>
         <h2 id="status"></h2>
         <button id="restartButton">Restart</button>
